tests/tests/ui-unstable/no-arguments.stderr
error: proc macro panicked
  --> $DIR/no-arguments.rs:14:5
   |
14 |     indoc!();
   |     ^^^^^^^^^
   |
   = help: message: argument must be a single string literal, but got 0 tokens

error: aborting due to previous error

